Bugfixes and little enhancements for New tkt view
 - Extnames with proper capital letters were not getting correct icon.
 - Width of Time form increased to accommodate scrollbars as well(for IE).
 - When there are no CRM integrations, it will not show the freshdesk logo.
 - Fixed issue in the note form, when the assigned agent had been converted to user.
 - Fixed issue where long filenames with a dot at the end and no proper extension causes trouble.

--- a/public/src/app/tkt_details.scss
+++ b/public/src/app/tkt_details.scss
@@ -1193,7 +1193,7 @@ p strong{
 	margin-left: 29px;
 	padding: 10px;
 	line-height: 150%;
-	background: #fffdf8;
+	background: #fefef0;
 	border: 1px solid #bbb;
 	@include min-height(30px);
 	@include border-radius(4px);
@@ -1328,6 +1328,9 @@ p strong{
 		font-size: 12px;
 		padding: 3px 15px 5px;
 		font-weight: bold;
+		text-overflow: ellipsis;
+		height: 18px;
+		white-space: nowrap;
 	}
 
 	&.private-note .helpdesk_note {
